# photoeditor2024

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  qmlformat.sh
editor/gui/: AppMenuBar.qml  CMakeLists.txt  editorstate.cpp  editorstate.h  main.qml
gui/: AppMenuBar.qml  CMakeLists.txt  editorstate.cpp  editorstate.h  main.qml
lib/: CMakeLists.txt  appstate.h  backend.h  editorapplication.cpp  editorapplication.h  main.cpp
lib/photoeditortools/: appstate.h  backend.h  editorapplication.h
lib/photoeditortools/project/: projectimageprovider.cpp  projectimageprovider.h
lib/project/: projectimageprovider.h
photoeditor/: AppMenuBar.qml  CMakeLists.txt  main.cpp  main.qml
photoeditor/src/: appstate.h  backend.h  editorapplication.cpp  editorapplication.h
photoeditor/src/project/: project.cpp  project.h  projectimageprovider.cpp  projectimageprovider.h
src/app/: CMakeLists.txt  appstate.cpp  backend.cpp  backend.h  editorapplication.cpp  editorapplication.h  main.cpp
src/app/project/: project.cpp  project.h  projectimageprovider.cpp  projectimageprovider.h
